# user-admin

./: README.md
client/: .env  package-lock.json  package.json  vite.config.js
client/src/: App.jsx  index.css
client/src/api/: delete_user.js  fetch_users.js  new_user.js  patch_user.js
client/src/filter/: Filter.css  Filter.jsx
client/src/new-user-page/: NewUser.css  NewUser.jsx
client/src/users/: Users.css  Users.jsx
client/src/welcome-page/: Welcome.css  Welcome.jsx
server/: main.py  pyproject.toml
server/database/: database.py  users.json
server/models/: user.py
server/utils/: response_model.py
